--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ found in the LICENSE file.
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark1">
 
 <head>
   <meta charset="UTF-8" />
@@ -23,7 +23,7 @@ found in the LICENSE file.
     <div class="elementsdiv">
       <div class="elementdiv">
         <h2>Buttons</h2>
-        <button>Button</button>
+        <button class="bt bt-orange">Button</button>
 
         <h3>Disabled</h3>
         <button disabled>Button</button>
@@ -37,7 +37,10 @@ found in the LICENSE file.
         <h3>H3</h3>
         <h4>H4</h4>
         <h5>H5</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsum asperiores commodi maiores esse molestiae temporibus facere nam vero at veniam, minima placeat fuga, voluptates velit possimus dolor. Blanditiis, doloremque?</p>
+        <h6>H6</h6>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsum asperiores commodi maiores esse
+          molestiae temporibus facere nam vero at veniam, minima placeat fuga, voluptates velit possimus dolor.
+          Blanditiis, doloremque?</p>
       </div>
 
       <div class="elementdiv">
@@ -67,6 +70,16 @@ found in the LICENSE file.
       </div>
 
       <div class="elementdiv">
+        <h2>Code</h2>
+
+        <code class="dark3">code</code>
+
+        <pre class="dark3"><code>code</code></pre>
+
+
+      </div>
+
+      <div class="elementdiv">
         <h2>Dropdowns</h2>
 
         <select id="dropdown">
@@ -78,7 +91,7 @@ found in the LICENSE file.
 
         <h3>Disabled</h3>
 
-       <select disabled id="dropdowndisabled">
+        <select disabled id="dropdowndisabled">
           <option value="1">Option 1</option>
           <option value="2">Option 2</option>
           <option value="3">Option 3</option>
