--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ found in the LICENSE file.
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/Webments/html/master/main.css" />
+  <link rel="stylesheet" type="text/css" href="main.css" />
   <link rel="stylesheet" type="text/css" href="neumorphic.css" />
   <title>Webments | Neumorphic</title>
 </head>
