--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ found in the LICENSE file.
 <body>
   <div class="container">
     <h3 class="title">Webments</h3>
-    <h1>Neumorphic</h1>
+    <h1>neumorphic.css</h1>
 
     <div class="elementsdiv">
       <div class="elementdiv">
