--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@ found in the LICENSE file.
 -->
 
 <!DOCTYPE html>
-<html lang="en" class="dark1">
+<html lang="en" class="light1">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="main.css" />
-  <link rel="stylesheet" type="text/css" href="simplistika.css" />
+  <link rel="stylesheet" type="text/css" href="neumorphic.css" />
   <link rel="shortcut icon" href="icon.png" />
   <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <title>Webments | Simplistika</title>
+  <title>Webments | Neumorphic</title>
 </head>
 
 <body>
   <div class="container">
     <div class="titleandsubtitlearea">
       <h3 class="title">Webments</h3>
-      <h1>simplistika.css</h1>
+      <h1>neumorphic.css</h1>
       <div class="repobuttons">
-        <a class="github-button" href="https://github.com/webments/simplistika.css"
+        <a class="github-button" href="https://github.com/webments/neumorphic.css"
           data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-icon="octicon-star"
-          aria-label="Star webments/simplistika.css on GitHub">Star</a>
-        <a class="github-button" href="https://github.com/webments/simplistika.css/fork"
+          aria-label="Star webments/neumorphic.css on GitHub">Star</a>
+        <a class="github-button" href="https://github.com/webments/neumorphic.css/fork"
           data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large"
-          data-icon="octicon-repo-forked" aria-label="Fork webments/simplistika.css on GitHub">Fork</a>
-        <a class="github-button" href="https://github.com/webments/simplistika.css/subscription"
+          data-icon="octicon-repo-forked" aria-label="Fork webments/neumorphic.css on GitHub">Fork</a>
+        <a class="github-button" href="https://github.com/webments/neumorphic.css/subscription"
           data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-icon="octicon-eye"
-          aria-label="Watch webments/simplistika.css on GitHub">Watch</a>
+          aria-label="Watch webments/neumorphic.css on GitHub">Watch</a>
       </div>
     </div>
     <div class="elementsdiv">
@@ -192,7 +192,7 @@ found in the LICENSE file.
       </div>
     </div>
   </div>
-  <center><a class="belowimg" href="https://github.com/Webments" target="_blank"><img src="footer.png""></img></a> <a class="belowimg" href="https://github.com/Mercode" target="_blank"><img src="icon.png"></img></a></center>
+  <center><a class="belowimg" href="https://github.com/Webments" target="_blank"><img src="footer.png""></img></a></center>
 </body>
 
 </html>
