--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@ found in the LICENSE file.
       <h3 class="title">Webments</h3>
       <h1>neumorphic.css</h1>
       <div class="repobuttons">
-        <a class="github-button" href="https://github.com/webments/neumorphic.css"
-          data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-icon="octicon-star"
-          aria-label="Star webments/neumorphic.css on GitHub">Star</a>
-        <a class="github-button" href="https://github.com/webments/neumorphic.css/fork"
-          data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large"
-          data-icon="octicon-repo-forked" aria-label="Fork webments/neumorphic.css on GitHub">Fork</a>
-        <a class="github-button" href="https://github.com/webments/neumorphic.css/subscription"
-          data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-icon="octicon-eye"
-          aria-label="Watch webments/neumorphic.css on GitHub">Watch</a>
+        <a class="github-button" href="https://github.com/Webments/neumorphic.css"
+          data-color-scheme="no-preference: light; light: light; dark: dark;" data-icon="octicon-star" data-size="large"
+          aria-label="Star Webments/neumorphic.css on GitHub">Star</a>
+        <a class="github-button" href="https://github.com/Webments/neumorphic.css/fork"
+          data-color-scheme="no-preference: light; light: light; dark: dark;" data-icon="octicon-repo-forked"
+          data-size="large" aria-label="Fork Webments/neumorphic.css on GitHub">Fork</a>
+        <a class="github-button" href="https://github.com/Webments/neumorphic.css/subscription"
+          data-color-scheme="no-preference: light; light: light; dark: dark;" data-icon="octicon-eye" data-size="large"
+          aria-label="Watch Webments/neumorphic.css on GitHub">Watch</a>
       </div>
     </div>
     <div class="elementsdiv">
@@ -40,26 +40,7 @@ found in the LICENSE file.
 
         <h3>Regular</h3>
         <button class="bt br-orange">Button</button>
-        <button class="bt br-blue">Button</button>
-        <button class="bt br-light-blue">Button</button>
-        <button class="bt br-red">Button</button>
-        <button class="bt br-pink">Button</button>
-        <button class="bt br-purple">Button</button>
-        <button class="bt br-yellow">Button</button>
-        <button class="bt br-green">Button</button>
-
-        <h4>Disabled</h4>
-        <button class="bt" disabled>Button</button>
-
-        <h3>Mini</h3>
-        <button class="mini-bt br-orange">Button</button>
-        <button class="mini-bt br-blue">Button</button>
-        <button class="mini-bt br-light-blue">Button</button>
-        <button class="mini-bt br-red">Button</button>
-        <button class="mini-bt br-pink">Button</button>
-        <button class="mini-bt br-purple">Button</button>
-        <button class="mini-bt br-yellow">Button</button>
-        <button class="mini-bt br-green">Button</button>
+        <button class="bt" disabled>Disabled</button>
 
         <h4>Disabled</h4>
         <button class="mini-bt" disabled>Button</button>
@@ -68,11 +49,6 @@ found in the LICENSE file.
 
       <div class="elementdiv">
         <h2>Text and Typography</h2>
-
-        <h1 class="display-1">Display 1</h1>
-        <h1 class="display-2">Display 2</h1>
-        <h1 class="display-3">Display 3</h1>
-        <h1 class="display-4">Display 4</h1>
 
         <h1>H1</h1>
         <h2>H2</h2>
@@ -97,19 +73,19 @@ found in the LICENSE file.
       <div class="elementdiv">
         <h2>Checkboxes</h2>
 
-        <input type="checkbox" class="inp-chb">Checkbox</input>
+        <input type="checkbox" class="inp-chb"><label for="">Checkbox</label></input>
 
         <h3>Disabled</h3>
-        <input type="checkbox" class="inp-chb" disabled>Checkbox</input>
+        <input type="checkbox" class="inp-chb" disabled><label for="">Checkbox</label></input>
       </div>
 
       <div class="elementdiv">
         <h2>Radio Buttons</h2>
 
-        <input type="radio">Radio</input>
+        <input type="radio"><label for="">Radio</label></input>
 
         <h3>Disabled</h3>
-        <input disabled type="radio">Checkbox</input>
+        <input disabled type="radio"><label for="">Radio</label></input>
       </div>
 
       <div class="elementdiv">
@@ -126,55 +102,6 @@ found in the LICENSE file.
         <h2>Dropdowns</h2>
 
         <select id="dropdown" class="slc slc-dark br-orange">
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
-          <option value="4">Option 4</option>
-        </select>
-
-        <select id="dropdown" class="slc slc-dark br-blue">
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
-          <option value="4">Option 4</option>
-        </select>
-
-        <select id="dropdown" class="slc slc-dark br-light-blue">
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
-          <option value="4">Option 4</option>
-        </select>
-
-        <select id="dropdown" class="slc slc-dark br-red">
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
-          <option value="4">Option 4</option>
-        </select>
-
-        <select id="dropdown" class="slc slc-dark br-pink">
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
-          <option value="4">Option 4</option>
-        </select>
-
-        <select id="dropdown" class="slc slc-dark br-purple">
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
-          <option value="4">Option 4</option>
-        </select>
-
-        <select id="dropdown" class="slc slc-dark br-yellow">
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
-          <option value="4">Option 4</option>
-        </select>
-
-        <select id="dropdown" class="slc slc-dark br-green">
           <option value="1">Option 1</option>
           <option value="2">Option 2</option>
           <option value="3">Option 3</option>
