New styles, fixes and formatter

--- a/index.html
+++ b/index.html
@@ -73,19 +73,44 @@ found in the LICENSE file.
       <div class="elementdiv">
         <h2>Checkboxes</h2>
 
-        <input type="checkbox" class="inp-chb"><label for="">Checkbox</label></input>
+        <label class="conatiner">Checkbox
+          <input type="checkbox" checked="checked">
+          <span class="checkmark"></span>
+        </label>
 
+        <label class="conatiner">Checkbox
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
         <h3>Disabled</h3>
-        <input type="checkbox" class="inp-chb" disabled><label for="">Checkbox</label></input>
+
+        <label class="conatiner">Checkbox (disabled)
+          <input disabled type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+
+        <label class="conatiner">Checkbox (disabled)
+          <input disabled type="checkbox">
+          <span class="checkmark"></span>
+        </label>
       </div>
 
       <div class="elementdiv">
         <h2>Radio Buttons</h2>
 
-        <input type="radio"><label for="">Radio</label></input>
+        <label class="conatinerradio">One
+          <input type="radio" checked="checked" name="radio">
+          <span class="checkmarkradio"></span>
+        </label>
+
+        <label class="conatinerradio">Two
+          <input type="radio" name="radio">
+          <span class="checkmarkradio"></span>
+        </label>
 
         <h3>Disabled</h3>
-        <input disabled type="radio"><label for="">Radio</label></input>
+
+
       </div>
 
       <div class="elementdiv">
