Radio button fix

--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@ found in the LICENSE file.
       <div class="elementdiv">
         <h2>Radio Buttons</h2>
 
-        <label class="conatinerradio">One
+        <label class="radiocontainer">One
           <input type="radio" checked="checked" name="radio">
           <span class="checkmarkradio"></span>
         </label>
 
-        <label class="conatinerradio">Two
+        <label class="radiocontainer">Two
           <input type="radio" name="radio">
           <span class="checkmarkradio"></span>
         </label>
