--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ found in the LICENSE file.
 <body>
   <div class="container">
     <div class="titleandsubtitlearea">
-      <h3 class="title">Webments</h3>
+      <h4 class="title">Webments</h4>
       <h1>neumorphic.css</h1>
       <div class="repobuttons">
         <a class="github-button" href="https://github.com/Webments/neumorphic.css"
@@ -38,7 +38,7 @@ found in the LICENSE file.
       <div class="elementdiv">
         <h2>Buttons</h2>
 
-        <h3>Regular</h3>
+        <h4>Regular</h4>
         <button class="bt br-orange">Button</button>
         <button class="bt" disabled>Disabled</button>
 
@@ -66,7 +66,7 @@ found in the LICENSE file.
         <h2>Text fields</h2>
         <input class="inp-text"></input>
 
-        <h3>Disabled</h3>
+        <h4>Disabled</h4>
         <input class="inp-text" disabled></input>
       </div>
 
@@ -82,7 +82,7 @@ found in the LICENSE file.
           <input type="checkbox">
           <span class="checkmark"></span>
         </label>
-        <h3>Disabled</h3>
+        <h4>Disabled</h4>
 
         <label class="conatiner">Checkbox (disabled)
           <input disabled type="checkbox">
@@ -108,7 +108,7 @@ found in the LICENSE file.
           <span class="checkmarkradio"></span>
         </label>
 
-        <h3>Disabled</h3>
+        <h4>Disabled</h4>
 
 
       </div>
@@ -116,10 +116,11 @@ found in the LICENSE file.
       <div class="elementdiv">
         <h2>Code</h2>
 
-        <code class="dark3">code</code>
+        <h4>Short code snippet</h4>
+        <code class="light3">code</code>
 
-        <pre class="dark3"><code>code</code></pre>
-
+        <h4>Full-length code block</h4>
+        <pre class="light3"><code>code</code></pre>
 
       </div>
 
@@ -133,7 +134,7 @@ found in the LICENSE file.
           <option value="4">Option 4</option>
         </select>
 
-        <h3>Disabled</h3>
+        <h4>Disabled</h4>
 
         <select disabled id="dropdowndisabled">
           <option value="1">Option 1</option>
