Style code pieces and tune up preview title

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@ found in the LICENSE file.
         <h2>Code</h2>
 
         <h4>Short code snippet</h4>
-        <code class="light3">code</code>
+        <code class="short-code light3">code</code>
 
         <h4>Full-length code block</h4>
-        <pre class="light3"><code>code</code></pre>
+        <pre class="long-code light3"><code>code</code></pre>
 
       </div>
 
