Add display title styles

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@ found in the LICENSE file.
       <div class="elementdiv">
         <h2>Text and Typography</h2>
 
+        <h1 class="display-1">Display 1</h1>
+        <h1 class="display-2">Display 2</h1>
+        <h1 class="display-3">Display 3</h1>
+        <h1 class="display-4">Display 4</h1>
+
         <h1>H1</h1>
         <h2>H2</h2>
         <h3>H3</h3>
