--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@ found in the LICENSE file.
         <h4>Regular</h4>
         <button class="bt br-orange">Button</button>
 
+        <pre class="long-code light3"><code></code></pre>
+
         <h4>Disabled</h4>
         <button class="mini-bt" disabled>Button</button>
+
+        <pre class="long-code light3"><code></code></pre>
 
       </div>
 
@@ -54,6 +58,8 @@ found in the LICENSE file.
         <h1 class="display-3">Display 3</h1>
         <h1 class="display-4">Display 4</h1>
 
+        <pre class="long-code light3"><code></code></pre>
+
         <h1>H1</h1>
         <h2>H2</h2>
         <h3>H3</h3>
@@ -61,17 +67,25 @@ found in the LICENSE file.
         <h5>H5</h5>
         <h6>H6</h6>
 
+        <pre class="long-code light3"><code></code></pre>
+
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsum asperiores commodi maiores esse
           molestiae temporibus facere nam vero at veniam, minima placeat fuga, voluptates velit possimus dolor.
           Blanditiis, doloremque?</p>
+
+          <pre class="long-code light3"><code></code></pre>
       </div>
 
       <div class="elementdiv">
         <h2>Text fields</h2>
         <input class="inp-text"></input>
 
+        <pre class="long-code light3"><code></code></pre>
+
         <h4>Disabled</h4>
         <input class="inp-text" disabled></input>
+
+        <pre class="long-code light3"><code></code></pre>
       </div>
 
       <div class="elementdiv">
@@ -86,6 +100,8 @@ found in the LICENSE file.
           <input type="checkbox">
           <span class="checkmark"></span>
         </label>
+
+        <pre class="long-code light3"><code></code></pre>
         <h4>Disabled</h4>
 
         <label class="conatiner">Checkbox (disabled)
@@ -97,6 +113,8 @@ found in the LICENSE file.
           <input disabled type="checkbox">
           <span class="checkmark"></span>
         </label>
+
+        <pre class="long-code light3"><code></code></pre>
       </div>
 
       <div class="elementdiv">
@@ -112,9 +130,21 @@ found in the LICENSE file.
           <span class="checkmarkradio"></span>
         </label>
 
+        <pre class="long-code light3"><code></code></pre>
+
         <h4>Disabled</h4>
 
+        <label class="radiocontainer">One
+          <input type="radio" name="radio" disabled>
+          <span class="checkmarkradio"></span>
+        </label>
 
+        <label class="radiocontainer">Two
+          <input type="radio" name="radio" disabled>
+          <span class="checkmarkradio"></span>
+        </label>
+
+        <pre class="long-code light3"><code></code></pre>
       </div>
 
       <div class="elementdiv">
@@ -123,8 +153,12 @@ found in the LICENSE file.
         <h4>Short code snippet</h4>
         <code class="short-code light3">code</code>
 
+        <pre class="long-code light3"><code></code></pre>
+
         <h4>Full-length code block</h4>
         <pre class="long-code light3"><code>code</code></pre>
+
+        <pre class="long-code light3"><code></code></pre>
 
       </div>
 
@@ -138,6 +172,8 @@ found in the LICENSE file.
           <option value="4">Option 4</option>
         </select>
 
+        <pre class="long-code light3"><code></code></pre>
+
         <h4>Disabled</h4>
 
         <select disabled id="dropdowndisabled">
@@ -146,6 +182,8 @@ found in the LICENSE file.
           <option value="3">Option 3</option>
           <option value="4">Option 4</option>
         </select>
+
+        <pre class="long-code light3"><code></code></pre>
       </div>
     </div>
   </div>
