change shadow properties and some classes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ found in the LICENSE file.
         <h2>Buttons</h2>
 
         <h4>Regular</h4>
-        <button class="bt br-orange">Button</button>
+        <button class="bt">Button</button>
 
         <h4>Disabled</h4>
         <button class="mini-bt" disabled>Button</button>
