Fix buttons, start adding code blocks

--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@ found in the LICENSE file.
         <h4>Regular</h4>
         <button class="bt">Button</button>
 
-        <pre class="long-code light3"><code></code></pre>
+        <pre class="long-code light3"><code>
+  &lt;button class="bt">Button&lt;/button&gt;
+        </code></pre>
 
         <h4>Disabled</h4>
-        <button class="mini-bt" disabled>Button</button>
+        <button disabled class="bt">Button</button>
 
-        <pre class="long-code light3"><code></code></pre>
+        <pre class="long-code light3"><code>
+  &lt;button disabled class="bt">Button&lt;/button&gt;
+        </code></pre>
 
       </div>
 
@@ -58,7 +62,12 @@ found in the LICENSE file.
         <h1 class="display-3">Display 3</h1>
         <h1 class="display-4">Display 4</h1>
 
-        <pre class="long-code light3"><code></code></pre>
+        <pre class="long-code light3"><code>
+  &lt;h1 class="display-1">Display 1&lt;/h1&gt;
+  &lt;h1 class="display-2">Display 2&lt;/h1&gt;
+  &lt;h1 class="display-3">Display 3&lt;/h1&gt;
+  &lt;h1 class="display-4">Display 4&lt;/h1&gt;
+        </code></pre>
 
         <h1>H1</h1>
         <h2>H2</h2>
@@ -67,7 +76,14 @@ found in the LICENSE file.
         <h5>H5</h5>
         <h6>H6</h6>
 
-        <pre class="long-code light3"><code></code></pre>
+        <pre class="long-code light3"><code>
+   &lt;h1>h1&lt;/h1&gt;
+   &lt;h2>h2&lt;/h2&gt;
+   &lt;h3>h3&lt;/h3&gt;
+   &lt;h4>h4&lt;/h4&gt;
+   &lt;h5>h5&lt;/h5&gt;
+   &lt;h6>h6&lt;/h6&gt;
+        </code></pre>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsum asperiores commodi maiores esse
           molestiae temporibus facere nam vero at veniam, minima placeat fuga, voluptates velit possimus dolor.
