Add code blocks

--- a/index.html
+++ b/index.html
@@ -77,31 +77,39 @@ found in the LICENSE file.
         <h6>H6</h6>
 
         <pre class="long-code light3"><code>
-   &lt;h1>h1&lt;/h1&gt;
-   &lt;h2>h2&lt;/h2&gt;
-   &lt;h3>h3&lt;/h3&gt;
-   &lt;h4>h4&lt;/h4&gt;
-   &lt;h5>h5&lt;/h5&gt;
-   &lt;h6>h6&lt;/h6&gt;
+  &lt;h1>h1&lt;/h1&gt;
+  &lt;h2>h2&lt;/h2&gt;
+  &lt;h3>h3&lt;/h3&gt;
+  &lt;h4>h4&lt;/h4&gt;
+  &lt;h5>h5&lt;/h5&gt;
+  &lt;h6>h6&lt;/h6&gt;
         </code></pre>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsum asperiores commodi maiores esse
           molestiae temporibus facere nam vero at veniam, minima placeat fuga, voluptates velit possimus dolor.
           Blanditiis, doloremque?</p>
 
-          <pre class="long-code light3"><code></code></pre>
+          <pre class="long-code light3"><code>
+  &lt;p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsum asperiores commodi maiores esse
+  molestiae temporibus facere nam vero at veniam, minima placeat fuga, voluptates velit possimus dolor.
+  Blanditiis, doloremque?&lt;/p&gt;
+          </code></pre>
       </div>
 
       <div class="elementdiv">
         <h2>Text fields</h2>
         <input class="inp-text"></input>
 
-        <pre class="long-code light3"><code></code></pre>
+        <pre class="long-code light3"><code>
+  &lt;input class="inp-text">&lt;/input&gt;
+        </code></pre>
 
         <h4>Disabled</h4>
-        <input class="inp-text" disabled></input>
+        <input disabled class="inp-text"></input>
 
-        <pre class="long-code light3"><code></code></pre>
+        <pre class="long-code light3"><code>
+  &lt;input disabled class="inp-text">&lt;/input&gt;        
+        </code></pre>
       </div>
 
       <div class="elementdiv">
