--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ found in the LICENSE file.
       </div>
     </div>
   </div>
-  <center><a class="belowimg" href="https://github.com/Webments" target="_blank"><img src="/assets/footer.png""></img></a></center>
+  <center><a class="belowimg" href="https://github.com/Webments" target="_blank"><img src="assets/footer.png""></img></a></center>
 </body>
 
 </html>
